src/objects/SBQQ__AttributeSet__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Config_Version__c</fullName>
        <label>CPQ Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Attribute Set</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>